# trader-cli-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: coverage.yml  rust.yml
src/: command_handlers.rs  main.rs
tests/: version-numbers.rs
