[package]
name = "trader-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI for accessing brokerage and market data."
repository = "https://github.com/tfiala/trader-cli-rs"

[dependencies]
anyhow = "1.0.98"
brokerage-messages = "0.1.8"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
dotenvy = { version = "0.15.7", features = ["clap"] }
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
version-sync = "0.9.5"
